# TestTaskYadro

./: CMakeLists.txt  README.md  YadroWindows.sln  YadroWindows.vcxproj  YadroWindows.vcxproj.filters  card.csv  exceptions.cpp  exceptions.h  main.cpp  parsingcsv.cpp  parsingcsv.h
exceptionCSV/: CMakeLists.txt
exceptionCSV/header/: exceptions.h
exceptionCSV/src/: exceptions.cpp
fileTestsCSV/: test2.csv  test3.csv  test4.csv  test5.csv  test6.csv
parsingCSV/: CMakeLists.txt
parsingCSV/src/: parsingcsv.cpp
src/: CMakeLists.txt  main.cpp
x64/Debug/: YadroWindows.exe.recipe  YadroWindows.ilk  YadroWindows.vcxproj.FileListAbsolute.txt  vc142.idb  vc143.idb
x64/Debug/YadroWindows.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  YadroWindows.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
